feat(seed): add residents-prompt seed (2 facilities, 12 residents, assessments, incidents, facility and resident compliance, admission fit scores); add npm script

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "prisma:migrate": "prisma migrate dev",
         "prisma:studio": "prisma studio",
         "seed": "ts-node --transpile-only prisma/seed.ts",
+        "seed:residents-prompt": "ts-node --transpile-only prisma/seed-residents-prompt.ts",
         "seed:marketplace-demo": "ts-node --transpile-only prisma/seed-marketplace-demo.ts",
         "generate:vapid": "node scripts/generate-vapid.js --update-env",
         "generate:icons": "node scripts/generate-pwa-icons.js",
