residents sprint: finalize features, CI gating, and synthetics updates [Droid-assisted]

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=us-east-1
 S3_BUCKET=
+S3_DISABLE=1 # set to 1 in CI/local to use mock uploads
 
 # Twilio (optional)
 TWILIO_ACCOUNT_SID=
