--- a/.github/workflows/post-deploy-synthetics.yml
+++ b/.github/workflows/post-deploy-synthetics.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   smoke:
+    # Run synthetics only when explicitly enabled OR when deploy credentials are present.
+    if: ${{ (vars.SYNTHETICS_ENABLED == '1') || (secrets.RENDER_DEPLOY_HOOK_URL != '') || (secrets.RENDER_API_KEY != '' && secrets.RENDER_SERVICE_ID != '') }}
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
@@ -49,17 +51,27 @@ jobs:
           echo "All synthetic checks passed."
 
       - name: Synthetic (optional): operator login + create/view resident
-        if: ${{ vars.OP_EMAIL != '' && vars.OP_PASSWORD != '' }}
+        # Allow either repository Variables or Secrets to provide credentials
+        if: ${{ (vars.OP_EMAIL != '' && vars.OP_PASSWORD != '') || (secrets.OP_EMAIL != '' && secrets.OP_PASSWORD != '') }}
         env:
           BASE: https://carelinkai.onrender.com
-          OP_EMAIL: ${{ vars.OP_EMAIL }}
-          OP_PASSWORD: ${{ vars.OP_PASSWORD }}
+          VAR_OP_EMAIL: ${{ vars.OP_EMAIL }}
+          VAR_OP_PASSWORD: ${{ vars.OP_PASSWORD }}
+          SEC_OP_EMAIL: ${{ secrets.OP_EMAIL }}
+          SEC_OP_PASSWORD: ${{ secrets.OP_PASSWORD }}
+          S3_DISABLE: 1
         shell: bash
         run: |
           set -euo pipefail
           echo "Attempting credentials login for operator to exercise residents API..."
           tmpdir=$(mktemp -d)
           COOKIES="$tmpdir/cookies.txt"
+          OP_EMAIL="${SEC_OP_EMAIL:-${VAR_OP_EMAIL:-}}"
+          OP_PASSWORD="${SEC_OP_PASSWORD:-${VAR_OP_PASSWORD:-}}"
+          if [ -z "$OP_EMAIL" ] || [ -z "$OP_PASSWORD" ]; then
+            echo "Credentials not set in vars or secrets; skipping"
+            exit 0
+          fi
           # 1) Get CSRF token
           csrf=$(curl -sL -c "$COOKIES" -b "$COOKIES" "$BASE/api/auth/csrf" | jq -r '.csrfToken // empty')
           if [ -z "$csrf" ]; then echo "Failed to fetch CSRF token" >&2; exit 1; fi
@@ -87,3 +99,25 @@ jobs:
           echo "/api/residents/$rid -> $rcode"
           if [ "$rcode" != "200" ]; then echo "Resident view failed" >&2; exit 1; fi
           echo "Synthetic resident create/view passed"
+
+          # 5) Presign mock upload and create a document record (mock mode)
+          echo "Attempt presign (mock) and create resident document"
+          pub=$(curl -s -c "$COOKIES" -b "$COOKIES" -H 'content-type: application/json' \
+            -d '{"contentType":"application/pdf","residentId":"'"$rid"'"}' \
+            "$BASE/api/uploads/presign" | jq -r '.publicUrl // empty')
+          if [ -z "$pub" ]; then echo "Presign failed" >&2; exit 1; fi
+          dcode=$(curl -s -o /dev/null -w "%{http_code}" -c "$COOKIES" -b "$COOKIES" -H 'content-type: application/json' \
+            -d '{"title":"Syn Doc","fileUrl":"'"$pub"'" ,"fileType":"application/pdf","fileSize":12345,"isEncrypted":true}' \
+            "$BASE/api/residents/$rid/documents")
+          echo "/api/residents/$rid/documents (POST) -> $dcode"
+          if [ "$dcode" != "201" ] && [ "$dcode" != "200" ]; then echo "Document create failed" >&2; exit 1; fi
+          echo "Synthetic document create (mock) passed"
+
+          # 6) Fetch summary PDF
+          echo "Fetch resident summary PDF"
+          hdrs=$(curl -sI -c "$COOKIES" -b "$COOKIES" "$BASE/api/residents/$rid/summary")
+          echo "$hdrs"
+          if ! echo "$hdrs" | grep -qi "content-type: application/pdf"; then
+            echo "Summary PDF did not return application/pdf" >&2; exit 1;
+          fi
+          echo "Synthetic summary PDF passed"
