--- a/.github/workflows/e2e-family.yml
+++ b/.github/workflows/e2e-family.yml
@@ -30,6 +30,7 @@ jobs:
       # App runtime
       NODE_OPTIONS: --max-old-space-size=4096
       NEXTAUTH_URL: http://localhost:3000
+      NEXTAUTH_SECRET: ${{ secrets.E2E_NEXTAUTH_SECRET }}
       ALLOW_DEV_ENDPOINTS: "1"
       ALLOW_INSECURE_AUTH_COOKIE: "1"
       # DB
@@ -103,6 +104,7 @@ jobs:
       # App runtime
       NODE_OPTIONS: --max-old-space-size=4096
       NEXTAUTH_URL: http://localhost:3000
+      NEXTAUTH_SECRET: ${{ secrets.E2E_NEXTAUTH_SECRET }}
       ALLOW_DEV_ENDPOINTS: "1"
       ALLOW_INSECURE_AUTH_COOKIE: "1"
       # DB
