--- a/.github/workflows/e2e-family.yml
+++ b/.github/workflows/e2e-family.yml
@@ -62,12 +62,13 @@ jobs:
 
       - name: Run Playwright (Residents core)
         env:
-          # Use dev server so NODE_ENV is not forced to production; enable dev endpoints in CI
+          # Run production server to avoid next dev flakiness; keep dev endpoints enabled via flags
           PLAYWRIGHT_WEB_SERVER_CMD: >-
-            cross-env NEXTAUTH_URL=http://localhost:3000 NEXTAUTH_SECRET=$NEXTAUTH_SECRET 
+            cross-env NODE_ENV=production PORT=3000 
+            NEXTAUTH_URL=http://localhost:3000 NEXTAUTH_SECRET=$NEXTAUTH_SECRET 
             ALLOW_DEV_ENDPOINTS=1 ALLOW_INSECURE_AUTH_COOKIE=1 
             DATABASE_URL=$DATABASE_URL 
-            npm run dev
+            npm run start
         run: |
           npx playwright test e2e/residents-*.spec.ts --reporter=line,html --trace on
 
@@ -136,12 +137,13 @@ jobs:
 
       - name: Run Playwright (Family)
         env:
-          # Use dev server so NODE_ENV is not forced to production; enable dev endpoints in CI
+          # Run production server to avoid next dev flakiness; keep dev endpoints enabled via flags
           PLAYWRIGHT_WEB_SERVER_CMD: >-
-            cross-env NEXTAUTH_URL=http://localhost:3000 NEXTAUTH_SECRET=$NEXTAUTH_SECRET 
+            cross-env NODE_ENV=production PORT=3000 
+            NEXTAUTH_URL=http://localhost:3000 NEXTAUTH_SECRET=$NEXTAUTH_SECRET 
             ALLOW_DEV_ENDPOINTS=1 ALLOW_INSECURE_AUTH_COOKIE=1 
             DATABASE_URL=$DATABASE_URL 
-            npm run dev
+            npm run start
         run: |
           npx playwright test e2e/family-*.spec.ts --reporter=line,html --trace on
 
