--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,25 @@ name: CI
 
 on:
   push:
-    branches: [ main, master, chore/**, feat/** ]
+    branches:
+      - main
+      - master
+      - chore/**
+      - feat/**
   pull_request:
-    branches: [ main, master ]
+    branches:
+      - main
+      - master
   workflow_dispatch:
+
+permissions:
+  contents: read
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    env:
+      CI: true
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -39,9 +50,11 @@ jobs:
         run: npm run build
 
   migrate-deploy:
-    if: github.ref == 'refs/heads/main' && secrets.DATABASE_URL != ''
     runs-on: ubuntu-latest
     needs: build-and-test
+    env:
+      # Using env to safely reference secrets; do not use secrets in job-level if
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -59,6 +72,5 @@ jobs:
         run: npx prisma generate
 
       - name: Migrate deploy (Prisma)
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        if: ${{ github.ref == 'refs/heads/main' && env.DATABASE_URL != '' }}
         run: npx prisma migrate deploy
