--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,14 @@ on:
 permissions:
   contents: read
 
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     env:
       CI: true
     steps:
@@ -52,8 +57,8 @@ jobs:
   migrate-deploy:
     runs-on: ubuntu-latest
     needs: build-and-test
+    timeout-minutes: 10
     env:
-      # Using env to safely reference secrets; do not use secrets in job-level if
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
     steps:
       - name: Checkout
