--- a/.github/workflows/e2e-family.yml
+++ b/.github/workflows/e2e-family.yml
@@ -69,13 +69,12 @@ jobs:
 
       - name: Run Playwright (Residents core)
         env:
-          # Run production server to avoid next dev flakiness; keep dev endpoints enabled via flags
+          # Use dev server so NODE_ENV is not forced to production; enable dev endpoints in CI
           PLAYWRIGHT_WEB_SERVER_CMD: >-
-            cross-env NODE_ENV=production PORT=3000 
-            NEXTAUTH_URL=http://localhost:3000 NEXTAUTH_SECRET=$NEXTAUTH_SECRET 
+            cross-env NEXTAUTH_URL=http://localhost:3000 NEXTAUTH_SECRET=$NEXTAUTH_SECRET 
             ALLOW_DEV_ENDPOINTS=1 ALLOW_INSECURE_AUTH_COOKIE=1 
             DATABASE_URL=$DATABASE_URL 
-            npm run start
+            npm run dev
         run: |
           npx playwright test e2e/residents-*.spec.ts --reporter=line,html --trace on --timeout=60000 --expect-timeout=10000
 
@@ -144,13 +143,12 @@ jobs:
 
       - name: Run Playwright (Family)
         env:
-          # Run production server to avoid next dev flakiness; keep dev endpoints enabled via flags
+          # Use dev server so NODE_ENV is not forced to production; enable dev endpoints in CI
           PLAYWRIGHT_WEB_SERVER_CMD: >-
-            cross-env NODE_ENV=production PORT=3000 
-            NEXTAUTH_URL=http://localhost:3000 NEXTAUTH_SECRET=$NEXTAUTH_SECRET 
+            cross-env NEXTAUTH_URL=http://localhost:3000 NEXTAUTH_SECRET=$NEXTAUTH_SECRET 
             ALLOW_DEV_ENDPOINTS=1 ALLOW_INSECURE_AUTH_COOKIE=1 
             DATABASE_URL=$DATABASE_URL 
-            npm run start
+            npm run dev
         run: |
           npx playwright test e2e/family-*.spec.ts --reporter=line,html --trace on --timeout=60000 --expect-timeout=10000
 
