ci(e2e): drop unsupported --expect-timeout flag; use config expect.timeout

--- a/.github/workflows/e2e-family.yml
+++ b/.github/workflows/e2e-family.yml
@@ -76,7 +76,7 @@ jobs:
             DATABASE_URL=$DATABASE_URL 
             npm run dev
         run: |
-          npx playwright test e2e/residents-*.spec.ts --reporter=line,html --trace on --timeout=60000 --expect-timeout=10000
+          npx playwright test e2e/residents-*.spec.ts --reporter=line,html --trace on --timeout=60000
 
       - name: Upload Playwright test artifacts (Residents) (always)
         if: always()
@@ -150,7 +150,7 @@ jobs:
             DATABASE_URL=$DATABASE_URL 
             npm run dev
         run: |
-          npx playwright test e2e/family-*.spec.ts --reporter=line,html --trace on --timeout=60000 --expect-timeout=10000
+          npx playwright test e2e/family-*.spec.ts --reporter=line,html --trace on --timeout=60000
 
       - name: Upload Playwright test artifacts (Family) (always)
         if: always()
