ci(e2e): serialize e2e-family after e2e-residents to avoid port collision

--- a/.github/workflows/e2e-family.yml
+++ b/.github/workflows/e2e-family.yml
@@ -16,6 +16,7 @@ concurrency:
 
 jobs:
   e2e-residents:
+    needs: e2e-residents
     runs-on: ubuntu-latest
     timeout-minutes: 45
     services:
