--- a/.github/workflows/e2e-family.yml
+++ b/.github/workflows/e2e-family.yml
@@ -76,7 +76,7 @@ jobs:
             DATABASE_URL=$DATABASE_URL 
             npm run start
         run: |
-          npx playwright test e2e/residents-*.spec.ts --reporter=line,html --trace on --timeout=60000
+          npx playwright test e2e/residents-*.spec.ts --workers=1 --reporter=line,html --trace on --timeout=60000
 
       - name: Upload Playwright test artifacts (Residents) (always)
         if: always()
