--- a/.github/workflows/e2e-family.yml
+++ b/.github/workflows/e2e-family.yml
@@ -74,7 +74,7 @@ jobs:
             cross-env NEXTAUTH_URL=http://localhost:3000 NEXTAUTH_SECRET=$NEXTAUTH_SECRET 
             ALLOW_DEV_ENDPOINTS=1 ALLOW_INSECURE_AUTH_COOKIE=1 
             DATABASE_URL=$DATABASE_URL 
-            npm run start:e2e
+            npm run start
         run: |
           # Run only the stabilized transfer spec for this PR
           npx playwright test e2e/residents-transfer.spec.ts --workers=1 --reporter=line,html --trace on --timeout=60000
