--- a/.github/workflows/e2e-family.yml
+++ b/.github/workflows/e2e-family.yml
@@ -84,6 +84,8 @@ jobs:
             e2e/residents-documents.spec.ts \
             e2e/residents-compliance.spec.ts \
             e2e/residents-csv-export.spec.ts \
+            e2e/residents-assessments-incidents-edit.spec.ts \
+            e2e/residents-assessments-incidents-update.spec.ts \
             --workers=1 --reporter=line,html --trace on --timeout=60000
 
       - name: Upload Playwright test artifacts (Residents) (always)
