--- a/.github/workflows/e2e-family.yml
+++ b/.github/workflows/e2e-family.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "**" ]
   workflow_dispatch:
+  schedule:
+    # Nightly at 06:00 UTC on default branch
+    - cron: '0 6 * * *'
 
 permissions:
   contents: read
