ci(synthetics): add repository_dispatch trigger for immediate manual runs (Droid-assisted)

--- a/.github/workflows/post-deploy-synthetics.yml
+++ b/.github/workflows/post-deploy-synthetics.yml
@@ -1,6 +1,10 @@
 name: Post Deploy Synthetics
 
-on: [push, workflow_dispatch]
+on:
+  push:
+  workflow_dispatch:
+  repository_dispatch:
+    types: [post-deploy-synthetics]
 
 jobs:
   smoke:
