ci(synthetics): add repository_dispatch trigger (synthetics_v2) to v2 workflow [Droid]

--- a/.github/workflows/post-deploy-synthetics-v2.yml
+++ b/.github/workflows/post-deploy-synthetics-v2.yml
@@ -2,6 +2,8 @@ name: Post Deploy Synthetics (Manual)
 
 on:
   workflow_dispatch:
+  repository_dispatch:
+    types: [synthetics_v2]
 
 jobs:
   smoke:
