ci(synthetics): add workflow_run trigger (Header Health Check) to run post-deploy until workflow_dispatch bug resolves

--- a/.github/workflows/post-deploy-synthetics-manual.yml
+++ b/.github/workflows/post-deploy-synthetics-manual.yml
@@ -10,6 +10,9 @@ on:
         default: false
   repository_dispatch:
     types: [post-deploy-synthetics]
+  workflow_run:
+    workflows: ["Header Health Check"]
+    types: [completed]
 
 permissions:
   contents: read
