feat: Add Provider seed data for testing
- Create prisma/seed-providers.ts with 5 diverse test Provider accounts
- Add seed:providers npm script to package.json
- Includes 3 verified and 2 unverified providers for testing
- Providers cover various service types (home care, medical transport, hospice, etc.)
- Realistic coverage areas across California cities
- Sample credentials for verified providers
- Password for all test accounts: Provider123!

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "seed": "ts-node --transpile-only prisma/seed.ts",
         "seed:residents-prompt": "ts-node --transpile-only prisma/seed-residents-prompt.ts",
         "seed:marketplace-demo": "ts-node --transpile-only prisma/seed-marketplace-demo.ts",
+        "seed:providers": "tsx prisma/seed-providers.ts",
         "generate:vapid": "node scripts/generate-vapid.js --update-env",
         "generate:icons": "node scripts/generate-pwa-icons.js",
         "test:pwa": "node scripts/test-pwa.js",
