feat: Add comprehensive demo seed script with 5 personas and realistic data
- Create demo.family@carelinkai.test (FAMILY role with care context)
- Create demo.operator@carelinkai.test (OPERATOR role for lead management)
- Create demo.aide@carelinkai.test (CAREGIVER role with experience)
- Create demo.provider@carelinkai.test (PROVIDER role - Golden Years Home Care)
- Create demo.admin@carelinkai.test (ADMIN role for verification)

Additional data:
- 6 additional caregivers (various cities and specialties)
- 5 additional providers (Bay Area agencies)
- 4 pre-created leads with various statuses
- 11 messages across 5 conversation threads

All accounts use password: DemoUser123!
Run with: npm run seed:demo

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "seed:residents-prompt": "ts-node --transpile-only prisma/seed-residents-prompt.ts",
         "seed:marketplace-demo": "ts-node --transpile-only prisma/seed-marketplace-demo.ts",
         "seed:providers": "ts-node --transpile-only --compiler-options '{\"module\":\"commonjs\",\"moduleResolution\":\"node\"}' prisma/seed-providers.ts",
+        "seed:demo": "ts-node --transpile-only --compiler-options '{\"module\":\"commonjs\",\"moduleResolution\":\"node\"}' prisma/seed-demo.ts",
         "generate:vapid": "node scripts/generate-vapid.js --update-env",
         "generate:icons": "node scripts/generate-pwa-icons.js",
         "test:pwa": "node scripts/test-pwa.js",
