fix: Resolve failed migration and create idempotent migration for Phase 2
- Created migration resolution script (scripts/resolve-failed-migration.sh)
- Renamed failed migration to .failed_backup for reference
- Created new idempotent migration: 20251208181611_add_assessments_incidents_fields_safe
  * Uses PostgreSQL DO blocks with IF NOT EXISTS checks
  * Safe to run multiple times
  * Handles partial application gracefully
- Updated package.json with migrate:resolve scripts
- Added comprehensive documentation (MIGRATION_FIX_GUIDE.md)
- Added deployment summary (MIGRATION_FIX_SUMMARY.md)

This fixes the P3009 error (failed migration) blocking production deployments.
All changes are safe and idempotent.

NOT PUSHED - Awaiting user confirmation before pushing to remote.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "cron:schedule": "node scripts/run-cron.js --mode schedule",
         "cron:run": "node scripts/run-cron.js",
         "type-check": "tsc -p tsconfig.json --noEmit",
-        "migrate:deploy": "prisma migrate deploy"
+        "migrate:deploy": "prisma migrate deploy",
+        "migrate:resolve": "bash scripts/resolve-failed-migration.sh",
+        "migrate:resolve-manual": "prisma migrate resolve --rolled-back 20251208170953_add_assessments_incidents_fields"
     },
     "prisma": {
         "seed": "ts-node --transpile-only prisma/seed.ts"
