fix: Resolve both failed migrations from database
- Update resolve-failed-migration.sh to mark BOTH failed migrations as rolled back:
  * 20251208170953_add_assessments_incidents_fields (original)
  * 20251208170953_add_assessments_incidents_fields.failed_backup (backup)

- Update package.json migrate:resolve-manual to chain both resolution commands

- Update MIGRATION_FIX_GUIDE.md with comprehensive explanation:
  * Added section explaining _prisma_migrations table issue
  * Clarified why both migrations must be resolved
  * Updated all relevant sections to reflect dual resolution

Root Cause: The .failed_backup migration was recorded in the database's
_prisma_migrations table during a previous deployment attempt. Even though
the folder was removed from the codebase, the database record remained,
blocking new migrations.

This fix ensures both failed migration records are marked as rolled back
before deploying the new idempotent migration.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "type-check": "tsc -p tsconfig.json --noEmit",
         "migrate:deploy": "prisma migrate deploy",
         "migrate:resolve": "bash scripts/resolve-failed-migration.sh",
-        "migrate:resolve-manual": "prisma migrate resolve --rolled-back 20251208170953_add_assessments_incidents_fields"
+        "migrate:resolve-manual": "prisma migrate resolve --rolled-back 20251208170953_add_assessments_incidents_fields && prisma migrate resolve --rolled-back 20251208170953_add_assessments_incidents_fields.failed_backup"
     },
     "prisma": {
         "seed": "ts-node --transpile-only prisma/seed.ts"
