feat: Add CSV export and document upload functionality to caregivers module
- Install papaparse for CSV export
- Create export utility functions with date formatting
- Add export button to caregivers list page respecting filters
- Install cloudinary and next-cloudinary for file storage
- Create upload API endpoint with file validation (10MB max, PDF/JPEG/PNG/DOC/DOCX)
- Create DocumentUploadModal component with drag-and-drop interface
- Update DocumentsTab with view/download/delete functionality
- Add Cloudinary environment variables to .env
- Update package.json with new dependencies

Features:
- CSV Export: Export filtered caregiver list to CSV with all relevant data
- Document Upload: Real file upload to Cloudinary with progress indicator
- Document Management: View, download, and delete documents
- Security: Authentication required, file type and size validation
- UX: Loading states, progress bars, error handling, responsive design

Part 2 of Caregivers Module Polish - Export & Upload Features

--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/carelinkai_marketplac
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=test-secret-key-for-playwright-tests-only
 ALLOW_DEV_ENDPOINTS=1
+
+# Cloudinary Configuration for File Upload
+CLOUDINARY_CLOUD_NAME=your_cloud_name_here
+CLOUDINARY_API_KEY=your_api_key_here
+CLOUDINARY_API_SECRET=your_api_secret_here
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=your_cloud_name_here
