--- a/package.json
+++ b/package.json
@@ -66,12 +66,14 @@
         "@types/bcrypt": "^6.0.0",
         "@types/dompurify": "^3.0.5",
         "@types/nodemailer": "^6.4.17",
+        "@types/papaparse": "^5.5.1",
         "archiver": "^7.0.1",
         "aws-sdk": "^2.1692.0",
         "axios": "^1.6.2",
         "bcrypt": "^6.0.0",
         "bcryptjs": "^2.4.3",
         "chart.js": "^4.4.0",
+        "cloudinary": "^2.8.0",
         "critters": "^0.0.23",
         "cssnano": "^7.1.0",
         "date-fns": "^2.30.0",
@@ -84,11 +86,13 @@
         "leaflet": "^1.9.4",
         "next": "14.0.4",
         "next-auth": "^4.24.5",
+        "next-cloudinary": "^6.17.5",
         "next-pwa": "^5.6.0",
         "next-themes": "^0.4.6",
         "node-fetch": "^3.3.2",
         "nodemailer": "^6.10.1",
         "otplib": "^12.0.1",
+        "papaparse": "^5.5.3",
         "pdfkit": "0.17.2",
         "pino": "10.1.0",
         "postcss-flexbugs-fixes": "^5.0.2",
