fix: Resolve inquiries API error and update navigation
- Fixed Prisma query errors in /api/operator/inquiries route
  - Changed from new PrismaClient() to shared prisma instance
  - Removed references to non-existent 'family.name' field
  - Updated to use 'family.primaryContactName' for search and sort
  - Added better error handling with detailed error messages

- Updated navigation in DashboardLayout
  - Separated 'My Inquiries' (FAMILY) from 'Home Inquiries' (OPERATOR/ADMIN)
  - Family users: /dashboard/inquiries
  - Operator users: /operator/inquiries

- Created seed data for inquiries module
  - Added prisma/seed-inquiries.ts
  - Creates 6 sample families and inquiries with various statuses
  - Added 'seed:inquiries' script to package.json

This fixes the 'Failed to fetch inquiries' error on the operator inquiries page.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "seed:demo": "ts-node --transpile-only --compiler-options '{\"module\":\"commonjs\",\"moduleResolution\":\"node\"}' prisma/seed-demo.ts",
         "seed:caregivers": "ts-node --transpile-only --compiler-options '{\"module\":\"commonjs\",\"moduleResolution\":\"node\"}' prisma/seed-caregiver-demo-data.ts",
         "seed:residents": "ts-node --transpile-only --compiler-options '{\"module\":\"commonjs\",\"moduleResolution\":\"node\"}' prisma/seed-resident-demo-data.ts",
+        "seed:inquiries": "ts-node --transpile-only --compiler-options '{\"module\":\"commonjs\",\"moduleResolution\":\"node\"}' prisma/seed-inquiries.ts",
         "generate:vapid": "node scripts/generate-vapid.js --update-env",
         "generate:icons": "node scripts/generate-pwa-icons.js",
         "test:pwa": "node scripts/test-pwa.js",
