ab72b8e3-bbc4-477a-91a7-ee54965bf2fa

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
         "ioredis": "^5.7.0",
         "isomorphic-dompurify": "^2.33.0",
         "leaflet": "^1.9.4",
+        "lucide-react": "^0.561.0",
         "next": "14.0.4",
         "next-auth": "^4.24.5",
         "next-cloudinary": "^6.17.5",
