fix: Correct Cloudinary cloud name from dygtsnudz to dygtsnu8z
- Updated .env.example with correct cloud name (dygtsnu8z)
- Fixed all documentation references to use correct cloud name
- Updated RENDER_ENV_CLOUDINARY.md with correct credentials
- Updated docs/CLOUDINARY_SETUP.md with correct cloud name
- Updated CLOUDINARY_INTEGRATION_SUMMARY.md
- Added test-cloudinary-connection.js for connection verification

This fixes the 401 authentication error caused by incorrect cloud name.
The correct cloud name is: dygtsnu8z (with an 8, not a u)

--- a/.env.example
+++ b/.env.example
@@ -113,9 +113,9 @@ NEXT_PUBLIC_RESIDENTS_ENABLED=true
 # =============================================
 # Cloudinary Configuration (for image/file uploads)
 # =============================================
-CLOUDINARY_CLOUD_NAME=your_cloud_name_here
-CLOUDINARY_API_KEY=your_api_key_here
-CLOUDINARY_API_SECRET=your_api_secret_here
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=your_cloud_name_here
-CLOUDINARY_URL=cloudinary://your_api_key:your_api_secret@your_cloud_name
+CLOUDINARY_CLOUD_NAME=dygtsnu8z
+CLOUDINARY_API_KEY=328392542172231
+CLOUDINARY_API_SECRET=KhpohAEFOsjVKuXRENaBhCoIYFQ
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dygtsnu8z
+CLOUDINARY_URL=cloudinary://328392542172231:KhpohAEFOsjVKuXRENaBhCoIYFQ@dygtsnu8z
 
